name:                keep-formation-algo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/keep-formation-algo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable keep-formation-algo-exe
  hs-source-dirs:      app, src
  main-is:             KeepFormation.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O0 -Wall
  build-depends:       attoparsec >= 0.13.0.1
                     , base
                     , comonad
                     , free
                     , lifted-base >= 0.2.3.6
                     , monad-loops
                     , mtl >= 2.2.1
                     , text >= 1.2.2.0
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/keep-formation-algo
